php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35528 Compilation error with MS compiler in snprintf.h
Submitted: 2005-12-03 02:06 UTC Modified: 2005-12-03 02:23 UTC
From: pechansky at hypervisual dot com Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.1.1 OS: Win32
Private report: No CVE-ID: None
 [2005-12-03 02:06 UTC] pechansky at hypervisual dot com
Description:
------------
In main\snprintf.h, line 114 must change from

#if PHP_WIN32

to

#if defined PHP_WIN32

otherwise the compiler will stop with an error like this:

c:\php-5.1.1\main\snprintf.h(114) : fatal error C1017: invalid integer constant expression


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-12-03 02:23 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Jul 11 07:00:02 2026 UTC