fix compile failure (bug #35528)